--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 @theme {
   /* Brand Colors */
   --color-brand-primary: #34735F;
+  --color-brand-primary-light: #63CFA0;
   --color-brand-secondary: #1f985c;
   --color-brand-blue: #00bfff;
   --color-brand-destructive: #DA6049;
