--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
   /* Brand Colors */
   --color-brand-primary: #34735F;
   --color-brand-primary-light: #63CFA0;
+  --color-brand-creamy: #FDE8CD;
+  --color-brand-secondary-blue:#4E566B ;
   --color-brand-secondary: #1f985c;
   --color-brand-blue: #00bfff;
   --color-brand-destructive: #DA6049;
