tweaked project details

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,14 @@
 
 @theme {
   /* Brand Colors */
-  --color-brand-primary: #34735F;
-  --color-brand-primary-light: #63CFA0;
-  --color-brand-creamy: #FDE8CD;
-  --color-brand-secondary-blue:#4E566B ;
-  --color-brand-secondary: #1f985c;
-  --color-brand-blue: #00bfff;
-  --color-brand-destructive: #DA6049;
-  --color-brand-purple: #EFEDFF;
+  --color-primary: #34735F;
+  --color-primary-light: #63CFA0;
+  --color-creamy: #FDE8CD;
+  --color-secondary-blue:#4E566B ;
+  --color-secondary: #1f985c;
+  --color-blue: #00bfff;
+  --color-destructive: #DA6049;
+  --color-purple: #EFEDFF;
 }
 
 @theme inline {
@@ -36,7 +36,7 @@
   --color-ring: var(--ring);
   --color-input: var(--input);
   --color-border: var(--border);
-  --color-destructive: var(--destructive);
+  /* --color-destructive: var(--destructive); */
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
@@ -44,7 +44,7 @@
   --color-secondary-foreground: var(--secondary-foreground);
   --color-secondary: var(--secondary);
   --color-primary-foreground: var(--primary-foreground);
-  --color-primary: var(--primary);
+  /* --color-primary: var(--primary); */
   --color-popover-foreground: var(--popover-foreground);
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
@@ -61,15 +61,15 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
+  /* --primary: oklch(0.205 0 0); */
+  /* --primary-foreground: oklch(0.985 0 0); */
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
+  /* --destructive: oklch(0.577 0.245 27.325); */
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
@@ -105,7 +105,7 @@
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
+  /* --destructive: oklch(0.704 0.191 22.216); */
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
